[package]
name = "rustc-semver"
description = "Crate for parsing versions of Rust releases"
version = "1.1.0"
authors = ["flip1995 <hello@philkrones.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/flip1995/rustc-semver"
keywords = ["parser", "version", "semver", "rustc"]
categories = ["parsing", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
